...
                fadeIn(animationSpec = tween(DURATION_FADE_IN_MS)) togetherWith fadeOut(animationSpec = tween(DURATION_FADE_OUT_MS))
            }
        ) { back ->
            if (back) {
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                    contentDescription = "Back",
                    modifier = Modifier.graphicsLayer { rotationZ = ANGLE_ROTATION_ICON }
                )
            } else {
                Icon(
                    imageVector = Icons.Default.Search,
                    contentDescription = "Search"
                )
            }
        }
    }
}

